--- a/public/html/doctor_dashboard.html
+++ b/public/html/doctor_dashboard.html
@@ -9,6 +9,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Open+Sans:wght@400;600&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <style>
         :root {
             --primary-color: #394C5C;
@@ -113,6 +116,36 @@
             border-color: var(--primary-color);
             box-shadow: 0 0 0 0.25rem rgba(57, 76, 92, 0.25);
         }
+
+        /* Chat Styles */
+        .chat-messages {
+            border: 1px solid #dee2e6;
+            border-radius: 5px;
+            padding: 10px;
+        }
+
+        .unread-chat {
+            background-color: rgba(151, 212, 241, 0.2);
+            border-left: 3px solid var(--primary-color);
+        }
+
+        #chatModal .modal-body {
+            min-height: 400px;
+        }
+
+        /* Floating chat button */
+        #openChatBtn {
+            z-index: 1000;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #openChatBtn:hover {
+            transform: scale(1.1);
+            transition: transform 0.2s;
+        }
     </style>
 </head>
 
@@ -136,9 +169,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Prescriptions</a>
                         </li>
-                        <li class="nav-item mt-4">
-                            <a class="nav-link" href="/logout">Logout</a>
-                        </li>
+                        <button onclick="logout()" class="btn btn-danger">Logout</button>
                     </ul>
                 </div>
             </div>
@@ -274,6 +305,14 @@
                             <input type="text" class="form-control" id="prescriptionDosage" required>
                         </div>
                         <div class="mb-3">
+                            <label for="prescriptionFrequency" class="form-label">Frequency</label>
+                            <input type="text" class="form-control" id="prescriptionFrequency" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="prescriptionDuration" class="form-label">Duration</label>
+                            <input type="text" class="form-control" id="prescriptionDuration" required>
+                        </div>
+                        <div class="mb-3">
                             <label for="prescriptionInstructions" class="form-label">Instructions</label>
                             <textarea class="form-control" id="prescriptionInstructions" rows="3"></textarea>
                         </div>
@@ -287,7 +326,17 @@
         </div>
     </div>
 
+    <!-- Floating Chat Button -->
+    <a class="btn btn-success position-fixed rounded-circle chat-btn"
+        style="bottom: 20px; right: 20px; width: 60px; height: 60px;" id="openChatBtn" href="/doctor/chat"
+        title="Open Chat">
+        <i class="bi bi-chat-dots" style="font-size: 1.5rem;"></i>
+    </a>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/auth.js"></script>
     <script src="../js/doctor.js"></script>
 </body>
 
