--- a/public/html/auth/login.html
+++ b/public/html/auth/login.html
@@ -7,53 +7,112 @@
     <title>Tele-Med - Login</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
         :root {
-            --primary-color: #394C5C;
-            --secondary-color: #D8E7EE;
-            --accent-color: #97D4F1;
-            --light-bg: #f8f9fa;
-            --text-color: #041A38;
-            --sidebar-text: #394C5C;
+            --primary-color: #2c3e50;
+            --primary-light: #3d566e;
+            --secondary-color: #e0f2f1;
+            --accent-color: #00bcd4;
+            --accent-dark: #008ba3;
+            --light-bg: #f8fafc;
+            --text-color: #2d3748;
+            --sidebar-text: #2c3e50;
+            --success-color: #4caf50;
+            --warning-color: #ff9800;
+            --danger-color: #f44336;
+            --border-radius: 12px;
+            --box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            --transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
         }
 
         body {
             background-color: var(--light-bg);
             color: var(--text-color);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
         }
 
         .login-container {
             max-width: 500px;
-            margin: 5rem auto;
-            padding: 2rem;
+            margin: 0 auto;
+            padding: 2.5rem;
             background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            border-radius: var(--border-radius);
+            box-shadow: var(--box-shadow);
+            transition: var(--transition);
+        }
+
+        .login-container:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
         }
 
         .btn-primary {
-            background-color: var(--primary-color);
-            border-color: var(--primary-color);
+            background-color: var(--accent-color);
+            border-color: var(--accent-color);
+            font-weight: 500;
+            padding: 0.5rem 1rem;
         }
 
         .btn-primary:hover {
-            background-color: #2d3b48;
-            border-color: #2d3b48;
+            background-color: var(--accent-dark);
+            border-color: var(--accent-dark);
+            transform: translateY(-1px);
+        }
+
+        .btn-link {
+            color: var(--accent-color);
+            text-decoration: none;
+            transition: var(--transition);
+        }
+
+        .btn-link:hover {
+            color: var(--accent-dark);
+            text-decoration: underline;
+            transform: translateY(-1px);
+        }
+
+        .form-control {
+            padding: 0.75rem 1rem;
+            border-radius: var(--border-radius);
+            border: 1px solid rgba(0, 0, 0, 0.1);
         }
 
         .form-control:focus {
             border-color: var(--accent-color);
-            box-shadow: 0 0 0 0.25rem rgba(151, 212, 241, 0.25);
+            box-shadow: 0 0 0 0.25rem rgba(0, 188, 212, 0.25);
         }
 
         a {
-            color: var(--primary-color);
+            color: var(--accent-color);
             text-decoration: none;
+            transition: var(--transition);
         }
 
         a:hover {
-            color: #2d3b48;
+            color: var(--accent-dark);
             text-decoration: underline;
+        }
+
+        .alert {
+            border-radius: var(--border-radius);
+        }
+
+        .password-actions {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1.5rem;
+        }
+
+        @media (max-width: 576px) {
+            .login-container {
+                padding: 1.5rem;
+                margin: 1rem;
+            }
         }
     </style>
 </head>
@@ -70,11 +129,18 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="password" class="form-label">Password:</label>
+                    <div class="password-actions">
+                        <label for="password" class="form-label">Password:</label>
+                        <a href="/password_forgotten" class="btn-link">
+                            <i class="bi bi-question-circle"></i> Forgot Password?
+                        </a>
+                    </div>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
 
-                <button type="submit" class="btn btn-primary w-100">Login</button>
+                <button type="submit" class="btn btn-primary w-100 py-2">
+                    <i class="bi bi-box-arrow-in-right me-2"></i> Login
+                </button>
             </form>
 
             <div id="errorMessage" class="mt-3 alert alert-danger" style="display: none;"></div>
