--- a/public/html/auth/register_patient.html
+++ b/public/html/auth/register_patient.html
@@ -7,6 +7,8 @@
     <title>Tele-Med - Patient Registration</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Select2 CSS for enhanced dropdown -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <style>
         :root {
             --primary-color: #394C5C;
@@ -55,6 +57,27 @@
             color: #2d3b48;
             text-decoration: underline;
         }
+
+        .select2-container--default .select2-selection--single {
+            height: 38px;
+            padding: 5px;
+            border: 1px solid #ced4da;
+            border-radius: 4px;
+        }
+
+        .select2-container--default .select2-selection--single .select2-selection__arrow {
+            height: 36px;
+        }
+
+        .select2-container--default .select2-results__option--highlighted {
+            background-color: var(--primary-color);
+            color: white;
+        }
+
+        .select2-container--default .select2-results__option--selected {
+            background-color: #f8f9fa;
+            color: var(--text-color);
+        }
     </style>
 </head>
 
@@ -95,6 +118,51 @@
                     <textarea class="form-control" id="address" name="address" rows="3"></textarea>
                 </div>
 
+                <!-- New medical information fields -->
+                <div class="mb-3">
+                    <label for="blood_type" class="form-label">Blood Type:</label>
+                    <select class="form-select" id="blood_type" name="blood_type">
+                        <option value="unknown">Unknown</option>
+                        <option value="A+">A+</option>
+                        <option value="A-">A-</option>
+                        <option value="B+">B+</option>
+                        <option value="B-">B-</option>
+                        <option value="AB+">AB+</option>
+                        <option value="AB-">AB-</option>
+                        <option value="O+">O+</option>
+                        <option value="O-">O-</option>
+                    </select>
+                </div>
+
+                <div class="mb-3">
+                    <label for="height_cm" class="form-label">Height (cm):</label>
+                    <input type="number" class="form-control" id="height_cm" name="height_cm">
+                </div>
+
+                <div class="mb-3">
+                    <label for="weight_kg" class="form-label">Weight (kg):</label>
+                    <input type="number" step="0.1" class="form-control" id="weight_kg" name="weight_kg">
+                </div>
+
+                <div class="mb-3">
+                    <label for="allergies" class="form-label">Allergies:</label>
+                    <textarea class="form-control" id="allergies" name="allergies" rows="2"></textarea>
+                </div>
+
+                <div class="mb-3">
+                    <label for="birthdate" class="form-label">Birthdate:</label>
+                    <input type="date" class="form-control" id="birthdate" name="birthdate">
+                </div>
+
+                <!-- Doctor selection field - ensure the name is correct -->
+                <div class="mb-3">
+                    <label for="doctorUserId" class="form-label">Primary Doctor (optional):</label>
+                    <select class="form-select js-doctor-search" id="doctorUserId" name="doctorUserId">
+                        <option value="">No assigned doctor</option>
+                        <!-- Options will be loaded via JavaScript -->
+                    </select>
+                </div>
+
                 <div class="mb-3">
                     <label for="password" class="form-label">Password (min 8 characters):</label>
                     <input type="password" class="form-control" id="password" name="password" minlength="8" required>
@@ -118,6 +186,11 @@
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Use local node_modules files -->
+    <script src="/node_modules/jquery/jquery.min.js"></script>
+    <script src="/node_modules/select2/js/select2.min.js"></script>
+    <link href="/node_modules/select2/css/select2.min.css" rel="stylesheet" />
+    <!-- Your existing script -->
     <script src="/js/auth.js"></script>
 </body>
 
