final final commit

--- a/public/html/doctor_dashboard.html
+++ b/public/html/doctor_dashboard.html
@@ -575,7 +575,7 @@
 
     <!-- Floating Chat Button -->
     <button class="btn btn-primary position-fixed rounded-circle chat-btn" style="bottom: 30px; right: 30px;"
-        id="openChatBtn" title="Open Chat">
+        id="openChatBtn" href="/doctor/chat" title="Open Chat">
         <i class="bi bi-chat-dots" style="font-size: 1.5rem;"></i>
     </button>
 
