--- a/public/html/patient_dashboard.html
+++ b/public/html/patient_dashboard.html
@@ -807,7 +807,7 @@
 
     <!-- Floating Chat Button -->
     <button class="btn btn-primary position-fixed rounded-circle chat-btn" style="bottom: 30px; right: 30px;"
-        id="openChatBtn" title="Open Chat">
+        id="openChatBtn" href="/patient/chat" title="Open Chat">
         <i class="bi bi-chat-dots" style="font-size: 1.5rem;"></i>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="unreadBadge"
             style="display: none;">
